fix: Popup table align

--- a/src/components/manage/Blocks/SimpleDataTable/templates/expandable/style.less
+++ b/src/components/manage/Blocks/SimpleDataTable/templates/expandable/style.less
@@ -182,6 +182,20 @@
 
 .popup-table-container {
   margin-bottom: 20px;
+
+  .ui.table thead tr th {
+    &.center {
+      text-align: center;
+    }
+
+    &.right {
+      text-align: right;
+    }
+
+    &.left {
+      text-align: left;
+    }
+  }
 }
 
 .popup-logo-container {
